# bob9-connect6

./: .gitignore  README.md
client/: boardscene.cpp  boardscene.h  client.pro  client_ko_KR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiplay.cpp  multiplay.h
connect6_protocol/: CMakeLists.txt  Makefile  connect6_protocol.cpp  connect6_protocol.h  connect6_protocol.py
server/: Makefile  main.c  server  server.c  server.h
